<resources>
    <string name="app_name">Shopping List</string>

    <string name="list_header_label">All List</string>
    <string name="list_name_label">Untitled List</string>

    <string name="item_header_label">All Item</string>
    <string name="item_name_label">Untitled Item</string>
    <string name="item_quantity_label">Item Quantity</string>
    <string name="item_price_label">Item Price</string>
    <string name="item_total_item_label">0</string>
    <string name="item_total_text_label">Total:</string>
    <string name="item_total_price_label">0.0</string>

    <string name="dialog_submit_button">Submit</string>
    <string name="dialog_cancel_button">Cancel</string>

    <string name="list_dialog_title">Your List</string>
    <string name="list_dialog_create_title">New List</string>
    <string name="list_dialog_edit_title">Editing List</string>
    <string name="list_dialog_name_hint">Enter a name</string>

    <string name="item_dialog_title">Your Item</string>
    <string name="item_dialog_create_item">New Item</string>
    <string name="item_dialog_edit_title">Editing Item</string>
    <string name="item_dialog_name_hint">Enter a name</string>
    <string name="item_dialog_quantity_hint">Enter a quantity</string>
    <string name="item_dialog_price_hint">Enter a price</string>
</resources>
