<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">

    <TableRow
        android:id="@+id/_item_table_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_list_row"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#349138"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/_item_name_label"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/item_name_label"
                android:textColor="#000000" />

            <TableRow
                android:id="@+id/table_row"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/_quantity_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/item_quantity_label"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/_price_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/item_price_label"
                    android:textColor="#000000" />

            </TableRow>

        </LinearLayout>

        <Button
            android:id="@+id/_edit_item_button"
            style="@style/Custom.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/edit_icon"
            app:iconTint="#4CAF50"
            tools:ignore="PrivateResource" />

        <Button
            android:id="@+id/_delete_item_button"
            style="@style/Custom.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/delete_icon"
            app:iconTint="#FF1100"
            tools:ignore="PrivateResource" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>